# arl

./: README.md  main.py  pyproject.toml
static/css/: style.css
templates/: main.html
templates/colorado/: index.html
