[tool.poetry]
name = "arl"
version = "0.1.0"
description = "Website to facilitate autonomous racing leagues"
authors = ["Kirk Roerig <mr.possoms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
